@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-06-22T01:09:01Z",
-  "count_outdated" : 103,
-  "uniques_outdated" : 85,
-  "count" : 104,
-  "uniques" : 86,
+  "timestamp" : "2025-07-05T01:00:48Z",
+  "count_outdated" : 104,
+  "uniques_outdated" : 86,
+  "count" : 105,
+  "uniques" : 87,
   "clones" : [
     {
-      "timestamp": "2025-06-18T00:00:00Z",
+      "timestamp": "2025-07-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
